# sessionGPT

./: .gitignore  README.md  pyproject.toml
src/sessiongpt/: __init__.py  main.py
tests/: test_main.py
