[project]
name = "sessiongpt"
version = "0.1.1"
description = "Generates an AWS IAM session policy given a description of the tasks the user needs to perform."
authors = [{ name = "Kamil Wilk", email = "github@kamilwilk.com" }]
dependencies = [
  "marvin>=2.1.5",
  "pydantic>=2.6.2",
  "rich>=13.7.0",
  "typer>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.2.2", "pytest>=8.0.2"]

[project.scripts]
sessiongpt = "sessiongpt.main:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sessiongpt"]
